feat(helm): added chart
